--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frappe UI App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <div id="modals"></div>
-    <div id="popovers"></div>
 
-    <script>
-      window.csrf_token = '{{ frappe.session.csrf_token }}'
-    </script>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Nunito:wght@300;400;600&display=swap"
+    rel="stylesheet">
+
+  <title>Frappe UI App</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <div id="modals"></div>
+  <div id="popovers"></div>
+
+  <script>
+    window.csrf_token = '{{ frappe.session.csrf_token }}'
+  </script>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
